--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   shared_preferences: ^2.5.3
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.9.1
+  google_fonts: ^6.3.2
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
